Fix SonarQube issues
Issue-ID: POLICY-5626
Change-Id: Iea4884577999f2fd2acf17803440860e0b204e49
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>